--- a/style.css
+++ b/style.css
@@ -44,6 +44,16 @@ a:hover {
     color: #b3b3b3;
 }
 
+form {
+    line-height: 2;
+    font-size: 1.25rem;
+}
+
+i {
+    font-size: 1.75rem;
+    margin: 0 10px 10xp 10px;
+}
+
 /* Navbar*/
 nav {
     height: 64px;
@@ -86,9 +96,61 @@ nav ul li {
     margin: 5%;
 }
 
+.background-image{
+    border: 0px;
+    width: 100%;
+    height: 115vh;
+    object-fit: cover;
+    position: absolute;
+}
+
 
 /* About Section*/
 
 .about div {
     margin: 8%;
 }
+
+/* Activities section */
+.activities{
+    display: block;
+    background-color: #FFF333;
+    padding: 50px 0 100px 0;
+    text-align: center;
+}
+
+.acticities-container{
+    display: flex;
+    margin: 0 8%;
+    justify-content: space-between;
+}
+
+.acticities-container p{
+    padding: 0 8%;
+}
+
+.acticities-container img{
+    /* width: 300px;
+    height: 300px; */
+    border-radius: 50%;
+}
+
+/* Context section */
+.contact{
+    justify-content: center;
+}
+
+.contact div{
+    margin: 5%;
+}
+
+/* Footer section */
+footer{
+    height: 125px;
+    width: 100%;
+    background-color: black;
+    color: white;
+    padding-top: 25px;
+    text-align: center;
+}
+
